# SDL-quick-start

./: .gitignore  CMakeLists.txt
Generate compile_commands/: Generate compile_commands.bat  Install tools.bat
src/: main.cpp
